--- a/app/src/main/res/layout/popular_movies_row.xml
+++ b/app/src/main/res/layout/popular_movies_row.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Popular Movies"
+        android:text="Películas populares"
         android:textStyle="bold"
         android:textSize="20sp"/>
 
