--- a/app/src/main/res/layout/top_rated_movies_row.xml
+++ b/app/src/main/res/layout/top_rated_movies_row.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Top Rated Movies"
+        android:text="Películas más valoradas"
         android:textStyle="bold"
         android:textSize="20sp"/>
 
